project-files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phishing-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: phishing.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /submit
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5000
